@@ -7,6 +7,11 @@ Lib/
 * removed unused 2nd argument of ldap.schema.tokenizer.split_tokens()
 * fixed method calls in ReconnectLDAPObject (thanks to Philipp Hahn)
 
+Modules/
+* an empty info message is replaced with str(errno) if errno is non-zero
+  which gives more information e.g. in case of ldap.SERVER_DOWN
+  (thanks to Markus Klein)
+
 Tests/
 * re-factored t_ldap_schema_tokenizer.py
 
@@ -1348,4 +1353,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.413 2017/04/24 08:25:16 stroeder Exp $
+$Id: CHANGES,v 1.414 2017/04/24 18:32:50 stroeder Exp $
